recursion.lessons.recursion.tree.Tree.scala.error
Tree:20: error: ';' expected but ',' found.
Pour dessiner un arbre à quatre étages, il faut dessiner un tronc de la taille indiquée, 
                                      ^Tree:22: error: ';' expected but symbol literal found.
l'angle indiqué, faire un autre arbre à 3 étages, puis revenir à sa position initiale. 
 ^